--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,14 @@
                     <reportVersion>2.4.1</reportVersion>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
         </plugins>
 
     </build>
